--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,20 +1,106 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
+header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 15vh;
+  padding-top: 10px;
+}
+
+header div.header {
+  width: 95vw;
+  margin: 0 auto;
+  background-color: #3cbd3c;
+  min-height: 15vh;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+header div.header div.text {
+  margin: 80px 0 0 45px;
+}
+
+header div.header div.text p {
+  color: rgb(161, 243, 161);
+  font-size: 50px;
+  letter-spacing: 4px;
+  font-weight: bold;
+}
+
+header div.header div.logo {
+  width: 180px;
+  height: 180px;
+  margin: 5px 70px 0 0;
+}
+
+header div.header div.logo img {
+  width: 90%;
+  height: 90%;
+  opacity: 0.8;
+}
+
+nav {
+  background-color: #282c34;
+  height: 100px;
+}
+
+nav div.nav {
+  margin: 0 auto;
+  width: 95vw;
+  border-bottom: 2px solid rgb(156, 233, 156);
+
+}
+
+nav div.nav ul {
+  display: flex;
+  list-style: none;
+}
+
+nav div.nav ul li {
+  width: 20%;
+  margin: 5px 2px 5px 2px;
+  height: 36px;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  line-height: 36px;
+}
+
+nav div.nav ul li a {
+  background-color: #116511;
+  text-decoration: none;
+  color: rgb(156, 233, 156);
+  display: block;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+
+nav div.nav ul li a:hover {
+  background-color: #147c14;
+}
+
+main {
+  background-color: #282c34;
+  min-height: 80vh;
+}
+
+footer {
+  background-color: #282c34;
+}
+
+footer div.footer {
+  background-color: #006600;
+  position: relative;
+  top: -15px;
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 5px;
+  border-top: 2px solid rgb(156, 233, 156);
+  border-bottom: 2px solid rgb(156, 233, 156);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 1px 0 2px rgb(156, 233, 156);
 }
