--- a/src/styles/Ipsum.css
+++ b/src/styles/Ipsum.css
@@ -1,3 +1,8 @@
+div.Ipsum {
+    min-height: 90vh;
+}
+
+
 div.addTask {
     padding-top: 50px;
 }
@@ -41,4 +46,12 @@ div.Task {
     color: white;
     width: 60vw;
     margin: 0 auto;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+
+p.addedTask {
+    padding-top: 10px;
+    color: white;
 }
