--- a/src/styles/SitAmet.css
+++ b/src/styles/SitAmet.css
@@ -1,7 +1,83 @@
+div.SitAmet {
+    width: 100%;
+    overflow: hidden;
+}
+
+
 div.SitAmet div.title {
     padding-top: 10px;
 }
 
 div.SitAmet div.title h3 {
     color: rgb(156, 233, 156);
+}
+
+div.products {
+    margin-top: 50px;
+    padding-bottom: 30px;
+    padding-left: 60px;
+    width: 100%;
+    display: flex;
+    min-height: 100vh;
+}
+
+div.products ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+div.products ul li {
+    width: 300px;
+    height: 400px;
+    padding: 10px;
+}
+
+div.products ul li div.product {
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgb(109, 194, 109);
+    box-shadow: 1px 0 2px rgb(156, 233, 156);
+    background-color: #093309;
+    color: white;
+}
+
+div.products ul li div.product h3 {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 10px;
+}
+
+div.products ul li div.product div.image {
+    margin: 0 auto;
+    border: 2px solid rgb(156, 233, 156);
+    box-shadow: 1px 0 2px rgb(156, 233, 156);
+    width: 75%;
+    height: 35%;
+}
+
+div.products ul li div.product p.description {
+    padding: 5px;
+}
+
+div.products ul li div.product div.price {
+    padding-top: 15px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+div.products ul li div.product div.price span {
+    margin-top: 8px;
+    margin-left: 70px;
+}
+
+div.products ul li div.product div.price button {
+    margin-right: 25px;
+    font-size: 17px;
+    padding: 4px 9px;
+    border: 2px solid rgb(109, 194, 109);
+    box-shadow: 1px 0 2px rgb(156, 233, 156);
+    background-color: #0c520c;
+    color: rgb(221, 221, 221);
 }
