--- a/src/styles/ShowCart.css
+++ b/src/styles/ShowCart.css
@@ -78,3 +78,22 @@ div.cartDetail ul li div.productMini div.deleteProduct {
 div.cartDetail ul li div.productMini div.deleteProduct span {
     cursor: pointer;
 }
+
+div.nextStep {
+    position: relative;
+    width: 120px;
+    height: 50px;
+    top: 40px;
+    margin: 0 auto;
+}
+
+div.nextStep button.nextStep {
+    font-size: 18px;
+    font-weight: bold;
+    border: 2px solid #00b300;
+    box-shadow: 1px 0 1px #17d417;
+    background-color: #006600;
+    color: white;
+    width: 100%;
+    height: 100%;
+}
